kubernetes/wiztopia-frontend.yaml
---
# Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiztopia-toystore
  namespace: wiztopia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiztopia-toystore
  template:
    metadata:
      labels:
        app: wiztopia-toystore
    spec:
      serviceAccountName: wiztopia-db-sa
      containers:
      - name: wiztopia-toystore
        image: "686633026196.dkr.ecr.us-east-1.amazonaws.com/cisotopia-repo2353127:frontend"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "400m"

---
apiVersion: v1
kind: Service
metadata:
  name: wiztopia-toystore
  namespace: wiztopia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: wiztopia-toystore
